# omicsync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api_reference.md  index.md  quickstart.md
docs/tutorials/: custom_data.md  tcga_brca.md
omicsync/: __init__.py
omicsync.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
omicsync/core/: __init__.py  dataset.py  modality.py  sample_index.py
omicsync/integration/: __init__.py  concat.py  mofa.py  sklearn_compat.py
omicsync/loaders/: __init__.py  csv.py  geo.py  open_targets.py  tcga.py
omicsync/normalisation/: __init__.py  cnv.py  methylation.py  mutations.py  protein.py  rna.py
omicsync/utils/: __init__.py  barcode.py  logging.py  validation.py
paper/: paper.bib  paper.md
tests/: conftest.py  test_dataset.py  test_integration.py  test_loaders.py  test_normalisation.py
