[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omicsync"
version = "0.1.0"
description = "Multi-omics data harmonisation for Python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Paterson V.", email = "citrus.bird72@gmail.com"}
]
keywords = ["bioinformatics", "multi-omics", "TCGA", "genomics", "data harmonisation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
mofa = ["mofapy2>=0.7.0"]
geo = ["GEOparse>=2.0.0"]
torch = ["torch>=1.12.0"]
anndata = ["anndata>=0.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
all = ["omicsync[mofa,geo,torch,anndata]"]

[project.urls]
Homepage = "https://github.com/vi-c-ky/omicsync"
Documentation = "https://github.com/vi-c-ky/omicsync/blob/main/docs/index.md"
Repository = "https://github.com/vi-c-ky/omicsync"
"Bug Tracker" = "https://github.com/vi-c-ky/omicsync/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["omicsync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
